--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "now ./build",
+    "postdeploy": "now --target production -A ./build/now.json"
   },
   "eslintConfig": {
     "extends": "react-app"
